2020-04-05  Jose E. Marchesi  <jemarch@gnu.org>

	* src/std.pk (atoi): Raise E_inval instead of E_generic when the
	provided base is not supported.
	* doc/poke.texi (atoi): Update accordingly.
	* testsuite/poke.std/atoi-14.pk: New test.

2020-04-05  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-rt.pk: Further simplifications.

2020-04-05  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-rt.pk: Simply the setting of load_path.

2020-04-05  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl.h (pkl_get_vm): New prototype.
	* src/pkl.c (pkl_get_vm): New function.
	* src/pkl-rt.pk: Define load_path and compute its initial value.
	* src/pkl-tab.y: Do not include poke.h.
	(load_module): Use load_path to locate modules.
	* doc/poke.texi (Load Path): New section.

2020-04-05  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-gen.c: Remove trailing blanks.
	* src/pkl-tab.y: Likewise.

2020-04-05  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-ast.h (PKL_AST_BUILTIN_GETENV): Define.
	* src/pkl-tab.y (BUILTIN_GETENV): New token.
	(builtin): Add rule for getenv.
	* src/pkl-lex.l: Recognize __PKL_BUILTIN_GETENV__ tokens.
	* src/pkl-gen.c (pkl_gen_ps_comp_stmt): Implement the getenv
	builtin.
	* src/pkl-insn.def (PKL_INSN_GETENV): Define.
	* src/Makefile.am (libpvmjitter_a_CPPFLAGS): Define _GNU_SOURCE.
	* src/pvm.jitter (getenv): New instruction.
	* src/pvm.h (PVM_E_INVAL): Define.
	(PVM_E_INVAL_MSG): Likewise.
	* src/pkl-rt.pk (getenv): Define.
	(EC_inval): Likewise.
	(E_inval): Likewise.
	* doc/poke.texi (System): New section.
	(getenv): New subsection.
	* testsuite/poke.pkl/getenv-1.pk: New test.
	* testsuite/poke.pkl/getenv-2.pk: Likewise.

2020-04-04  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl.h (pkl_new): New argument `vm'.
	(pkl_quiet_p): New prototype.
	(pkl_set_quiet_p): Likewise.
	(pkl_ice): Get an argument `compiler'.
	* src/pkl.c (struct pkl_compiler): New fields `vm' and `quiet_p'.
	(pkl_new): Get a VM as an argument.